--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <span id="date">all right reserved</span>
     </p>
 </footer>
-    <script src="../js/app.js"></script>
+    <script src="./js/app.js"></script>
 
 </body>
 </html>
