--- a/en/Avenue_of_Stars_Attraction_Info.html
+++ b/en/Avenue_of_Stars_Attraction_Info.html
@@ -32,11 +32,11 @@
                 <article>
                   <div class="slider">
                     <div class="slides" id="slides">
-                        <div><a class="slide-boat" href="../HongKong/1.png" data-lightbox="Avenue of Stars" data-title="Avenue of Stars"><img class="slide" src="../HongKong/1.png" alt="Avenue of Stars"></a></div>
-                        <div><a class="slide-boat" href="../HongKong/2.png" data-lightbox="Avenue of Stars" data-title="Avenue of Stars"><img class="slide" src="../HongKong/2.png" alt="Avenue of Stars"></a></div>
-                        <div><a class="slide-boat" href="../HongKong/3.png" data-lightbox="Avenue of Stars" data-title="Avenue of Stars"><img class="slide" src="../HongKong/3.png" alt="Avenue of Stars"></a></div>
-                        <div><a class="slide-boat" href="../HongKong/4.png" data-lightbox="Avenue of Stars" data-title="Avenue of Stars"><img class="slide" src="../HongKong/4.png" alt="Avenue of Stars"></a></div>
-                        <div><a class="slide-boat" href="../HongKong/5.png" data-lightbox="Avenue of Stars" data-title="Avenue of Stars"><img class="slide" src="../HongKong/5.png" alt="Avenue of Stars"></a></div>
+                        <div><a class="slide-boat" href="../HongKong/1.png" data-lightbox="Avenue of Stars-1" data-title="Avenue of Stars"><img class="slide" src="../HongKong/1.png" alt="Avenue of Stars"></a></div>
+                        <div><a class="slide-boat" href="../HongKong/2.png" data-lightbox="Avenue of Stars-2" data-title="Avenue of Stars"><img class="slide" src="../HongKong/2.png" alt="Avenue of Stars"></a></div>
+                        <div><a class="slide-boat" href="../HongKong/3.png" data-lightbox="Avenue of Stars-3" data-title="Avenue of Stars"><img class="slide" src="../HongKong/3.png" alt="Avenue of Stars"></a></div>
+                        <div><a class="slide-boat" href="../HongKong/4.png" data-lightbox="Avenue of Stars-4" data-title="Avenue of Stars"><img class="slide" src="../HongKong/4.png" alt="Avenue of Stars"></a></div>
+                        <div><a class="slide-boat" href="../HongKong/5.png" data-lightbox="Avenue of Stars-5" data-title="Avenue of Stars"><img class="slide" src="../HongKong/5.png" alt="Avenue of Stars"></a></div>
                     </div>
                     <!-- <button class="prev" onclick="prevSlide()">&#10094</button> -->
                     <!-- <button class="next" onclick="nextSlide()">&#10095</button> -->
