--- a/en/HongKong.html
+++ b/en/HongKong.html
@@ -103,19 +103,19 @@
             <article class="about-info">
                     <div class="picture-flex">
                         <div>
-                            <a href="Avenue_of_Stars_History.html" target="_blank" class="picture-img-a">
+                            <a href="Avenue_of_Stars_History.html" target="_self" class="picture-img-a">
                             <img class="picture-img-off"  src="../images/history.png" alt="history" title="history">
                             <img class="picture-img-on"  src="../images/history-dark.png" alt="history" title="history">
                             </a>
                         </div>
                         <div>
-                            <a href="Avenue_of_Stars_Culture.html" target="_blank" class="picture-img-a">
+                            <a href="Avenue_of_Stars_Culture.html" target="_self" class="picture-img-a">
                             <img class="picture-img-off"  src="../images/culture.png" alt="culture" title="culture">
                             <img class="picture-img-on"  src="../images/culture-dark.png" alt="culture" title="culture">
                             </a>
                         </div>
                         <div>
-                            <a href="Avenue_of_Stars_Attraction_Info.html" target="_blank" class="picture-img-a">
+                            <a href="Avenue_of_Stars_Attraction_Info.html" target="_self" class="picture-img-a">
                             <img class="picture-img-off"  src="../images/Avenue_of_Stars_v2.png" alt="attraction" title="attraction">
                             <img class="picture-img-on"  src="../images/Avenue_of_Stars_dark_v2.png" alt="attraction" title="attraction">
                             </a>
