--- a/en/Avenue_of_Stars_Attraction_Info.html
+++ b/en/Avenue_of_Stars_Attraction_Info.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/attraction.css">
     <link rel="stylesheet" href="../css/lightbox.min.css">
     <link rel="stylesheet" href="../css/slider.css">
-    <title>Attraction</title>
+    <title>Avenue of Stars Attraction</title>
 </head>
 <body>
     <div>
