--- a/en/TAIPEI_101_Attraction_Info.html
+++ b/en/TAIPEI_101_Attraction_Info.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/attraction.css">
     <link rel="stylesheet" href="../css/lightbox.min.css">
     <link rel="stylesheet" href="../css/slider.css">
-    <title>Attraction</title>
+    <title>TAIPEI 101 Attraction</title>
 </head>
 <body>
     <div>
