--- a/en/TAIPEI_101_Culture.html
+++ b/en/TAIPEI_101_Culture.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/culture.css">
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
     <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
-    <title>Avenue of Stars Culture</title>
+    <title>TAIPEI 101 Culture</title>
     
 </head>
 <body>
