--- a/en/N_Seoul_Tower_Attraction_Info.html
+++ b/en/N_Seoul_Tower_Attraction_Info.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="../css/attraction.css">
     <link rel="stylesheet" href="../css/lightbox.min.css">
     <link rel="stylesheet" href="../css/slider.css">
-    <title>TAIPEI 101 Attraction</title>
+    <title>N Seoul Tower Attraction</title>
 </head>
 <body>
     <div>
         <video class="background-video"  autoplay muted loop style="margin: auto;">
-            <source src="../video/TAIPEI_101.mp4" type="video/mp4">
+            <source src="../video/N_Seoul_Tower.mp4" type="video/mp4">
         </video>
 
         <section class="section" id="about">
@@ -31,25 +31,50 @@
                 <article>
                   <div class="slider">
                     <div class="slides" id="slides">
-                        <div><a class="slide-boat" href="../TaiWan/1.png" data-lightbox="TAIPEI 101-1" data-title="TAIPEI 101"><img class="slide" src="../TaiWan/1.png" alt="TAIPEI 101"></a></div>
-                        <div><a class="slide-boat" href="../TaiWan/2.png" data-lightbox="TAIPEI 101-2" data-title="TAIPEI 101"><img class="slide" src="../TaiWan/2.png" alt="TAIPEI 101"></a></div>
-                        <div><a class="slide-boat" href="../TaiWan/3.png" data-lightbox="TAIPEI 101-3" data-title="TAIPEI 101"><img class="slide" src="../TaiWan/3.png" alt="TAIPEI 101"></a></div>
-                        <div><a class="slide-boat" href="../TaiWan/4.png" data-lightbox="TAIPEI 101-4" data-title="TAIPEI 101"><img class="slide" src="../TaiWan/4.png" alt="TAIPEI 101"></a></div>
-                        <div><a class="slide-boat" href="../TaiWan/5.png" data-lightbox="TAIPEI 101-5" data-title="TAIPEI 101"><img class="slide" src="../TaiWan/5.png" alt="TAIPEI 101"></a></div>
+                        <div><a class="slide-boat" href="../SouthKorea/1.png" data-lightbox="N Seoul Tower-1" data-title="N Seoul Tower"><img class="slide" src="../SouthKorea/1.png" alt="N Seoul Tower"></a></div>
+                        <div><a class="slide-boat" href="../SouthKorea/2.png" data-lightbox="N Seoul Tower-2" data-title="N Seoul Tower"><img class="slide" src="../SouthKorea/2.png" alt="N Seoul Tower"></a></div>
+                        <div><a class="slide-boat" href="../SouthKorea/3.png" data-lightbox="N Seoul Tower-3" data-title="N Seoul Tower"><img class="slide" src="../SouthKorea/3.png" alt="N Seoul Tower"></a></div>
+                        <div><a class="slide-boat" href="../SouthKorea/4.png" data-lightbox="N Seoul Tower-4" data-title="N Seoul Tower"><img class="slide" src="../SouthKorea/4.png" alt="N Seoul Tower"></a></div>
+                        <div><a class="slide-boat" href="../SouthKorea/5.png" data-lightbox="N Seoul Tower-5" data-title="N Seoul Tower"><img class="slide" src="../SouthKorea/5.png" alt="N Seoul Tower"></a></div>
                     </div>
                     <!-- <button class="prev" onclick="prevSlide()">&#10094</button> -->
                     <!-- <button class="next" onclick="nextSlide()">&#10095</button> -->
                 </div>
        
                 <div>
-                  <p>Taipei 101, formerly known as the Taipei World Financial Center, is a 508.0 m (1,667 ft), 101 story skyscraper in Taipei, Taiwan. It is owned by Taipei Financial Center Corporation. The building was officially classified as the world's tallest from its opening on 31 December 2004 (in time to celebrate New Year's Eve). However, the Burj Khalifa surpassed Taipei 101 in 2010. Upon completion, it became the world's first skyscraper to exceed a height of half a kilometer (about 0.3 miles). As of 2023, Taipei 101 is the tallest building in Taiwan and the eleventh tallest building in the world.</p>
+                    <p class="h3">Visiting</p>
 
-                  <p>The elevators of Taipei 101 that transport passengers from the 5th to the 89th floor in 37 seconds (attaining 60.6 km/h (37.7 mph)) set speed records. In 2011, Taipei 101 was awarded a Platinum certificate rating under the LEED certification system for energy efficiency and environmental design, becoming the tallest and largest green building in the world. The structure regularly appears as an icon of Taipei in international media, and the Taipei 101 fireworks displays are a regular feature of New Year's Eve broadcasts and celebrations.</p>
+                    <p>Many visitors ride the Namsan cable car up Namsan Mountain to walk to the tower. The tower is renowned as a national landmark and for its cityscape views. The 236.7-metre (777 ft) tower sits on the Namsan Mountain (243 metres or 797 feet). It attracts thousands of tourists and locals every year, especially during nighttime when the tower lights up. Photographers enjoy the panoramic view the tower offers. Each year, approximately 8.4 million visit the N Seoul Tower, which is surrounded by many other attractions South Korea offers, including Namsan Park and Namsangol Hanok Village. Visitors may go up the tower for a fee that differs for the following groups: children, elderly and teenagers, and adults. Rates also differ for packages and group size.</p>
 
-                  <p>Taipei 101's postmodernist architectural style evokes traditional Asian aesthetics in a modern structure employing industrial materials. Its design incorporates a number of features that enable the structure to withstand the Pacific Ring of Fire's earthquakes and the region's tropical storms. The tower houses offices, restaurants, shops, and indoor and outdoor observatories. The tower is adjoined by a multilevel shopping mall that has the world's largest ruyi symbol as an exterior feature.</p>
+                    <p>In 2012, surveys conducted by Seoul City revealed foreign tourists ranked the N Seoul Tower as the number one tourist attraction. The N Seoul Tower is now also a symbol of Seoul.</p>
+
+                    <p class="h3">Lighting of the Tower</p>
+
+
+                    <p>The N Seoul Tower is illuminated in blue from sunset to 11 pm (10 pm in winter) on days that the air quality in Seoul does not exceed 45 micrograms per cubic metre (2.0×10−5 gr/cu ft) as measured by fine dust concentration. During the spring of 2012, the tower was lit up for 52 days, which is four days more than in 2011. The tower uses the latest LED technology to offer visitors a digital, cultural art experience through 'light art.' The N Seoul Tower puts on many different shows, including the "Reeds of Light" and "Shower of Light."</p>
+
+                    <p>An exception to this is Earth Hour. During Earth Hour, lights are turned off nationwide to promote energy conservation awareness. At N Seoul Tower, lights are turned off in support of Earth Hour at 8 pm.</p>
+
+                    <p class="h3">Love Padlocks</p>
+
+                    <p>In a poll of nearly 2,000 foreign visitors conducted by the Seoul Metropolitan Government in November 2011, 16 percent stated that hanging named padlocks on the tower fence as a symbol of love was their favorite activity in Seoul. This attraction is situated on the 2nd floor of the N Plaza, at the Roof Terrace. The "Locks of Love" is a popular location for people to hang locks that symbolize eternal love, and has been depicted in many Korean television shows, dramas, and movies for this reason.</p>
+
+                    <p>'Love padlocks' is a common couple activity that involves purchasing of a padlock and key, where initials, messages and symbols can be personally inscribed onto the surface of the lock with markers and pens. Securing the padlocks on the fences filled with locks of previous participants, the key is often thrown away as a symbol of everlasting love. This is similar to the love locks in Paris, France, on the Pont Neuf bridge.</p>
+
+                    <p class="h3">Wishing Pond and Observatory</p>
+
+                    <p>The N Tower also holds many other attractions including the digital observatory and the Wishing Pond. The Wishing Pond can be found on the second floor of the tower, where people throw coins into the pond while making a wish. The coins are collected and donated to help develop schools in China and Southeast Asia, especially in underdeveloped areas. The observatory, renovated in 2011, is on the third floor. The observatory not only offers a 360° view of the city, but also exhibits 600 years of Korean history through 36 LCD screens. The fifth floor houses a French restaurant known as N Grill.</p>
+
+                    <p class="h3">Other events and attractions</p>
+
+                    <p>In 2008, the Teddy Bear Museum was opened at the tower, with a 7-metre-tall (23 ft) Christmas tree made with 300 teddy bears to celebrate its opening. It showcases teddy bears in the past, present, and future of Seoul, as well as teddy bears models in Seoul attractions, such as the Cheonggyecheon Stream, Myeongdong, Insadong, and Dongdaemun.</p>
+
+                    <p class="h3">Displays of 55-inch OLED Panels</p>
+
+                    <p>OLED panels are displayed all around the Namsan Seoultower from level 1 to 4. On level 1, red rose petals will be greeted by a 9-metre (30 ft) OLED tunnel with welcome messages, and a 15-by-3-metre (49.2 ft × 9.8 ft) curved panorama OLED display with a view of the Gwanghwamun Gate and Gyeongbokgung Palace through the four seasons. On level 2, we can see the OLED circle, shaped like a round belt hanging in the air. On level 4, there is a 24-metre-long (79 ft) wavy structure decorated with images of wish lanterns, flames and patterns of dancheong to represent beautiful sky across Seoul. And next, we can experience '3D video world'.</p>
 
                   <div class="button-attraction" style="text-align: center;">
-                    <button onclick="TAIPEI_101_previous_page()">Previous page</button>
+                    <button onclick="N_Seoul_Tower_previous_page()">Previous page</button>
                     <button onclick="home()">Home</button>
                     </div>
                 </div>
