--- a/en/TAIPEI_101_Culture.html
+++ b/en/TAIPEI_101_Culture.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div class="main-content">
-            <h1>History</h1>
+            <h1>Culture</h1>
         <video autoplay muted loop class="video">
             <source src="../video/TAIPEI_101.mp4" type="video/mp4">
         </video>  
@@ -34,7 +34,7 @@
          <p>Curled ruyi figures appear throughout the structure as a design motif. Though the shape of each ruyi at Taipei 101 is traditional, its rendering in industrial metal is plainly modern. The ruyi is a talisman of ancient origin associated in art with heavenly clouds. It connotes healing, protection and fulfillment. It appears in celebrations of the attainment of new career heights. The sweeping curved roof of the adjoining mall culminates in a colossal ruyi that shades pedestrians. Each ruyi ornament on the exterior of the Taipei 101 tower stands at least 8 m (26 ft) tall.</p>
 
 <div class="image">
-            <img src="../TaiWan/TAIPEI_101_2020.png" alt="Avenue of Stars" title="Avenue of Stars" class="culture_image" >
+            <img src="../TaiWan/TAIPEI_101_2020.png" alt="TAIPEI 101" title="TAIPEI 101" class="culture_image" >
             </div>
         <p>At night the bright yellow gleam from its pinnacle casts Taipei 101 in the role of a candle or torch upholding the ideals of liberty and welcome. From 6 to 10 p.m., the tower's lights display one of seven colors, according to a weekly schedule.</p>
 
