--- a/en/Avenue_of_Stars_Culture.html
+++ b/en/Avenue_of_Stars_Culture.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div class="main-content">
-            <h1>History</h1>
+            <h1>Culture</h1>
         <video autoplay muted loop class="video">
             <source src="../video/Avenue_of_Stars.mp4" type="video/mp4">
         </video>  
