--- a/en/Avenue_of_Stars_History.html
+++ b/en/Avenue_of_Stars_History.html
@@ -40,17 +40,17 @@
             </div>
         </div>
         <h1>History</h1>
-        <h3>Establishment</h3>
+        <p class="h3">Establishment</p>
         <p>In <span class="year">1982</span>, the New World Group built a promenade along the waterfront around the New World Centre in Tsim Sha Tsui East, Kowloon. In 2004, the Group announced it would spend HK$40 million to build the Avenue of Stars, a project supported by the Hong Kong Tourism Board, Tourism Commission, the Leisure and Cultural Services Department of the Hong Kong Government and the Hong Kong Film Awards Association.</p>
 
         <p>The avenue was opened to the general public on 28 April <span class="year">2004</span> with an opening ceremony held the previous day, 27 April <span class="year">2004</span>. The opening ceremony was presided over by a number of government and industry figures, including Henry Tang (Financial Secretary), Stephen Ip (Secretary for Economic Development and Labour), Patrick Ho (Secretary of Home Affairs), Selina Chow (Chair of Hong Kong Tourism Board), Manfred Wong (Director/Actor), and Cheng Yu-tung (Chair of New World Group); in which the privately funded avenue was handed over to the Hong Kong SAR government as public property. At opening, the avenue honoured an initial 73 inductees elected by the Hong Kong Film Awards Association and the readers of City Entertainment.</p>
         
-       <h3>Redevelopment controversy</h3>
+       <p class="h3">Redevelopment controversy</p>
         <p>After having managed the avenue for 11 years, its contract is due to expire. It was announced in August <span class="year">2015</span> that the Leisure and Cultural Services Department of the Hong Kong government would redevelop and expand the avenue jointly with the company. The Hong Kong government declared that the enhancement project would contain limited commercial appeal, and no luxury shops or high-end restaurants would be added. The walkway, very popular with tourists, is to be closed off and relocated to the Tsim Sha Tsui East Waterfront Podium Garden temporarily for three years while the expansion is undertaken.</p>
 
         <p>The decision to award the contract for the redevelopment to the company without putting it out to tender, on the justification that the project was non-profit, sparked controversy locally. Residents' groups and other development companies owning properties adjacent to the walk expressed discontent, whilst the LCSD claimed that consultations with the local district council had been favourable. In an apparent attempt to de-fuse the public furore at the apparent collusion between government and big business, the government promised a public consultation.</p>
         
-        <h3>Renovation</h3>
+        <p class="h3">Renovation</p>
         <p>On 31 January <span class="year">2019</span>, the Avenue was reopened to the public after three years of renovation, redesigned by New York High Line architect James Corner Field Operations (JCFO) together with other international and local designers.</p>
         <div class="timeline" style="text-align: center;">
         <button onclick="Avenue_of_Stars_previous_page()">Previous page</button>
