--- a/en/HongKong.html
+++ b/en/HongKong.html
@@ -165,7 +165,7 @@
                 </ul>
                 </div>
              </article>
-             <article class="info-card" onclick="Singapore()">
+             <article class="info-card" onclick="en_Singapore()">
                 <div class="info-img-container" >
                     <img src="../images/Merlion_Park.png" class="info-img"  alt="">
                     <p class="info-place">Singapore, Singapore City, Merlion Park</p>
