--- a/en/Singapore.html
+++ b/en/Singapore.html
@@ -89,7 +89,7 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>Singapore, Singapore City, Merlion Park</h1>
-            <video autoplay muted loop style="margin: auto; max-width: 800px;" >
+            <video autoplay muted loop class="video" >
                 <source src="../video/Singapore.mp4" type="video/mp4">
             </video>
         </div>
@@ -108,19 +108,19 @@
             <article class="about-info">
                     <div class="picture-flex">
                         <div>
-                            <a href="Avenue_of_Stars_History.html" target="_self" class="picture-img-a">
+                            <a href="Merlion_Park_History.html" target="_self" class="picture-img-a">
                             <img class="picture-img-off"  src="../images/history.png" alt="history" title="history">
                             <img class="picture-img-on"  src="../images/history-dark.png" alt="history" title="history">
                             </a>
                         </div>
                         <div>
-                            <a href="Avenue_of_Stars_Culture.html" target="_self" class="picture-img-a">
+                            <a href="Merlion_Park_Culture.html" target="_self" class="picture-img-a">
                             <img class="picture-img-off"  src="../images/culture.png" alt="culture" title="culture">
                             <img class="picture-img-on"  src="../images/culture-dark.png" alt="culture" title="culture">
                             </a>
                         </div>
                         <div>
-                            <a href="Avenue_of_Stars_Attraction_Info.html" target="_self" class="picture-img-a">
+                            <a href="Merlion_Park_Attraction_Info.html" target="_self" class="picture-img-a">
                             <img class="picture-img-off"  src="../images/Merlion_Park_v2.png" alt="attraction" title="attraction">
                             <img class="picture-img-on"  src="../images/Merlion_Park_dark_v2.png" alt="attraction" title="attraction">
                             </a>
