--- a/en/TaiBei.html
+++ b/en/TaiBei.html
@@ -88,7 +88,7 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>Tai Wan, Tai Bei, TAIPEI 101</h1>
-            <video autoplay muted loop style="margin: auto; max-width: 800px;" >
+            <video autoplay muted loop class="video" >
                 <source src="../video/TaiBei.mp4" type="video/mp4">
             </video>
         </div>
