--- a/en/N_Seoul_Tower_Attraction_Info.html
+++ b/en/N_Seoul_Tower_Attraction_Info.html
@@ -46,28 +46,28 @@
 
                     <p>Many visitors ride the Namsan cable car up Namsan Mountain to walk to the tower. The tower is renowned as a national landmark and for its cityscape views. The 236.7-metre (777 ft) tower sits on the Namsan Mountain (243 metres or 797 feet). It attracts thousands of tourists and locals every year, especially during nighttime when the tower lights up. Photographers enjoy the panoramic view the tower offers. Each year, approximately 8.4 million visit the N Seoul Tower, which is surrounded by many other attractions South Korea offers, including Namsan Park and Namsangol Hanok Village. Visitors may go up the tower for a fee that differs for the following groups: children, elderly and teenagers, and adults. Rates also differ for packages and group size.</p>
 
-                    <p>In 2012, surveys conducted by Seoul City revealed foreign tourists ranked the N Seoul Tower as the number one tourist attraction. The N Seoul Tower is now also a symbol of Seoul.</p>
+                    <p>In <span class="year">2012</span>, surveys conducted by Seoul City revealed foreign tourists ranked the N Seoul Tower as the number one tourist attraction. The N Seoul Tower is now also a symbol of Seoul.</p>
 
                     <p class="h3">Lighting of the Tower</p>
 
 
-                    <p>The N Seoul Tower is illuminated in blue from sunset to 11 pm (10 pm in winter) on days that the air quality in Seoul does not exceed 45 micrograms per cubic metre (2.0×10−5 gr/cu ft) as measured by fine dust concentration. During the spring of 2012, the tower was lit up for 52 days, which is four days more than in 2011. The tower uses the latest LED technology to offer visitors a digital, cultural art experience through 'light art.' The N Seoul Tower puts on many different shows, including the "Reeds of Light" and "Shower of Light."</p>
+                    <p>The N Seoul Tower is illuminated in blue from sunset to 11 pm (10 pm in winter) on days that the air quality in Seoul does not exceed 45 micrograms per cubic metre (2.0×10−5 gr/cu ft) as measured by fine dust concentration. During the spring of <span class="year">2012</span>, the tower was lit up for 52 days, which is four days more than in <span class="year">2011</span>. The tower uses the latest LED technology to offer visitors a digital, cultural art experience through 'light art.' The N Seoul Tower puts on many different shows, including the "Reeds of Light" and "Shower of Light."</p>
 
                     <p>An exception to this is Earth Hour. During Earth Hour, lights are turned off nationwide to promote energy conservation awareness. At N Seoul Tower, lights are turned off in support of Earth Hour at 8 pm.</p>
 
                     <p class="h3">Love Padlocks</p>
 
-                    <p>In a poll of nearly 2,000 foreign visitors conducted by the Seoul Metropolitan Government in November 2011, 16 percent stated that hanging named padlocks on the tower fence as a symbol of love was their favorite activity in Seoul. This attraction is situated on the 2nd floor of the N Plaza, at the Roof Terrace. The "Locks of Love" is a popular location for people to hang locks that symbolize eternal love, and has been depicted in many Korean television shows, dramas, and movies for this reason.</p>
+                    <p>In a poll of nearly 2,000 foreign visitors conducted by the Seoul Metropolitan Government in November <span class="year">2011</span>, 16 percent stated that hanging named padlocks on the tower fence as a symbol of love was their favorite activity in Seoul. This attraction is situated on the 2nd floor of the N Plaza, at the Roof Terrace. The "Locks of Love" is a popular location for people to hang locks that symbolize eternal love, and has been depicted in many Korean television shows, dramas, and movies for this reason.</p>
 
                     <p>'Love padlocks' is a common couple activity that involves purchasing of a padlock and key, where initials, messages and symbols can be personally inscribed onto the surface of the lock with markers and pens. Securing the padlocks on the fences filled with locks of previous participants, the key is often thrown away as a symbol of everlasting love. This is similar to the love locks in Paris, France, on the Pont Neuf bridge.</p>
 
                     <p class="h3">Wishing Pond and Observatory</p>
 
-                    <p>The N Tower also holds many other attractions including the digital observatory and the Wishing Pond. The Wishing Pond can be found on the second floor of the tower, where people throw coins into the pond while making a wish. The coins are collected and donated to help develop schools in China and Southeast Asia, especially in underdeveloped areas. The observatory, renovated in 2011, is on the third floor. The observatory not only offers a 360° view of the city, but also exhibits 600 years of Korean history through 36 LCD screens. The fifth floor houses a French restaurant known as N Grill.</p>
+                    <p>The N Tower also holds many other attractions including the digital observatory and the Wishing Pond. The Wishing Pond can be found on the second floor of the tower, where people throw coins into the pond while making a wish. The coins are collected and donated to help develop schools in China and Southeast Asia, especially in underdeveloped areas. The observatory, renovated in <span class="year">2011</span>, is on the third floor. The observatory not only offers a 360° view of the city, but also exhibits 600 years of Korean history through 36 LCD screens. The fifth floor houses a French restaurant known as N Grill.</p>
 
                     <p class="h3">Other events and attractions</p>
 
-                    <p>In 2008, the Teddy Bear Museum was opened at the tower, with a 7-metre-tall (23 ft) Christmas tree made with 300 teddy bears to celebrate its opening. It showcases teddy bears in the past, present, and future of Seoul, as well as teddy bears models in Seoul attractions, such as the Cheonggyecheon Stream, Myeongdong, Insadong, and Dongdaemun.</p>
+                    <p>In <span class="year">2008</span>, the Teddy Bear Museum was opened at the tower, with a 7-metre-tall (23 ft) Christmas tree made with 300 teddy bears to celebrate its opening. It showcases teddy bears in the past, present, and future of Seoul, as well as teddy bears models in Seoul attractions, such as the Cheonggyecheon Stream, Myeongdong, Insadong, and Dongdaemun.</p>
 
                     <p class="h3">Displays of 55-inch OLED Panels</p>
 
