--- a/en/Seoul.html
+++ b/en/Seoul.html
@@ -88,7 +88,7 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>South Korea, Seoul, N Seoul Tower</h1>
-            <video autoplay muted loop style="margin: auto; max-width: 800px;">
+            <video autoplay muted loop class="video">
                 <source src="../video/Seoul.mp4" type="video/mp4">
             </video>
         </div>
