--- a/en/Seoul.html
+++ b/en/Seoul.html
@@ -25,11 +25,11 @@
         <!-- <div class="desktop-nav"> -->
         <div class="nav-links">
             <ul class="nav-list" id="nav-list">
-                <li><a href="../index.html" class="nav-link">Home</a></li>
-                <!-- <li><a href="#about" class="nav-link">About </a></li> -->
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#about" class="nav-link">About </a></li>
                 <!-- <li><a href="#notices" class="nav-link">Notice</a></li> -->
                 <li><a href="#infos" class="nav-link">Info</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
         <div class="nav-icons">
@@ -75,10 +75,10 @@
             
             <ul class="mobile-nav-list" id="mobile-nav-list">
                 <li><a href="#home" class="mobile-nav-link">Home</a></li>
-                <!-- <li><a href="#about" class="mobile-nav-link">About</a></li> -->
+                <li><a href="#about" class="mobile-nav-link">About</a></li>
                 <!-- <li><a href="#notice" class="mobile-nav-link">Notice</a></li> -->
                 <li><a href="#infos" class="mobile-nav-link">Info</a></li>
-                <li><a href="#contact" class="mobile-nav-link">Contact</a></li>
+                <li><a href="contact.html" class="mobile-nav-link">Contact</a></li>
                 <!-- <li><a href="../tc/index.html" class="mobile-nav-link" title="繁體中文">繁體中文</a></li>
                 <li><a href="../sc/index.html" class="mobile-nav-link" title="簡體中文">簡體中文</a></li> -->
     
@@ -94,6 +94,27 @@
         </div>
     </section>
     <!-- about -->
+
+    <section class="section" id="about">
+        <div class="section-title">
+            <h2>about <span>South Korea</span></h2>
+        </div>
+        <div class="section-center about-center">
+            <div class="about-img" style="border: 1px solid black;">
+                <img src="../SouthKorea/SouthKorea.png" class="about-photo" alt="awesome landscape">
+            </div>
+            <article class="about-info">
+                <p class="h3">What is South Korea?</p>
+                <p>The Republic of Korea (Korean: 대한민국/大Korea Daehan Minguk), referred to as Korea (한국/Korean Hanguk), also known as South Korea among Hong Kong and Taiwanese, is a republic located in the southern part of the Korean Peninsula in East Asia. The capital is Seoul. South Korea is surrounded by sea on three sides, with the West Sea (Yellow Sea) to the southwest, the Korean Strait (Korean Strait) to the southeast, the East China Sea (Sea of ​​Japan) to the east, and the Democratic People's Republic of Korea to the north across the 38th Parallel (demilitarized zone between North and South Korea). The Republic of Korea is adjacent to the Republic of Korea, with a total area of ​​approximately 100,000 square kilometers (approximately 45% of the total area of ​​the Korean Peninsula) and a population of approximately 51.692 million.</p>
+
+                <p>South Korea is a member of the G20 and the Organization for Economic Cooperation and Development (OECD), a founding member of the Asia-Pacific Economic Cooperation (APEC) and the East Asia Summit, and is also one of the Four Asian Tigers and the Future 11 Countries. From the 1960s to the 1990s, South Korea's economy developed rapidly, driven by the government's "export-led" economic strategy, creating the "Miracle on the Han River." Currently, South Korea's GDP ranks 11th in the world based on international exchange rates and 12th in the world based on relative purchasing power indicators. Its per capita GDP is US$31,396, ranking among the top 10 countries ranked by the World Bank and the International Monetary Fund. and the CIA World Factbook developed country directories.</p>
+
+                <p>The political system of South Korea is divided into three branches: executive, legislative and judicial. As the head of state, the President of South Korea has the highest administrative power and has the power to appoint government officials such as the Prime Minister. Since 1987, he has been directly elected by the people of South Korea. His term is five years and he can only serve one term. The South Korean Parliament is a unicameral legislative body, elected through a combination of a single constituency system and a proportional representation system. Each term is four years. South Korea implements a multi-party system. Among them, the right-wing National Power and the center-left Common Democratic Party are the largest mainstream parties in South Korea and dominate South Korean politics. The judicial branch of South Korea is independent of the executive and legislative bodies. Its highest judicial body is the Supreme Court of South Korea, whose members are appointed by the president and approved by the National Assembly. In addition, South Korea also has a Constitutional Court to protect the constitution and protect the basic rights of citizens.</p>
+                <p><a href="#infos" class="btn">read more</a></p>
+           </article>
+        </div>
+    </section>
+
     <section class="section" id="about">
         <div class="section-title">
             <!-- <h2>about <span>Four Asian Tigers</span></h2> -->
@@ -186,10 +207,10 @@
 <footer class="section footer">
     <ul class="footer-links">
         <li><a href="#home" class="footer-link">Home</a></li>
-        <!-- <li><a href="#about" class="footer-link">About</a></li> -->
+        <li><a href="#about" class="footer-link">About</a></li>
         <!-- <li><a href="#notice" class="footer-link">Notice</a></li> -->
         <li><a href="#info" class="footer-link">Info</a></li>
-        <li><a href="#contact" class="footer-link">Contact</a></li>
+        <li><a href="contact.html" class="footer-link">Contact</a></li>
     </ul>
     <ul class="footer-icons">
         <li>
