--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <ul class="mobile-nav-list" id="mobile-nav-list">
                 <li><a href="#home" class="mobile-nav-link">Home</a></li>
                 <li><a href="#about" class="mobile-nav-link">About</a></li>
-                <li><a href="#notice" class="mobile-nav-link">Notice</a></li>
-                <li><a href="#info" class="mobile-nav-link">Info</a></li>
+                <li><a href="#notices" class="mobile-nav-link">Notice</a></li>
+                <li><a href="#infos" class="mobile-nav-link">Info</a></li>
                 <li><a href="./en/contact.html" class="mobile-nav-link">Contact</a></li>
                 <!-- <li><a href="../tc/index.html" class="mobile-nav-link" title="繁體中文">繁體中文</a></li>
                 <li><a href="../sc/index.html" class="mobile-nav-link" title="簡體中文">簡體中文</a></li> -->
