--- a/en/TaiBei.html
+++ b/en/TaiBei.html
@@ -25,11 +25,11 @@
         <!-- <div class="desktop-nav"> -->
         <div class="nav-links">
             <ul class="nav-list" id="nav-list">
-                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="#home" class="nav-link">Home</a></li>
                 <!-- <li><a href="#about" class="nav-link">About </a></li> -->
                 <!-- <li><a href="#notices" class="nav-link">Notice</a></li> -->
                 <li><a href="#infos" class="nav-link">Info</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
         <div class="nav-icons">
@@ -75,10 +75,10 @@
             
             <ul class="mobile-nav-list" id="mobile-nav-list">
                 <li><a href="#home" class="mobile-nav-link">Home</a></li>
-                <!-- <li><a href="#about" class="mobile-nav-link">About</a></li> -->
+                <li><a href="#about" class="mobile-nav-link">About</a></li>
                 <!-- <li><a href="#notice" class="mobile-nav-link">Notice</a></li> -->
                 <li><a href="#infos" class="mobile-nav-link">Info</a></li>
-                <li><a href="#contact" class="mobile-nav-link">Contact</a></li>
+                <li><a href="contact.html" class="mobile-nav-link">Contact</a></li>
                 <!-- <li><a href="../tc/index.html" class="mobile-nav-link" title="繁體中文">繁體中文</a></li>
                 <li><a href="../sc/index.html" class="mobile-nav-link" title="簡體中文">簡體中文</a></li> -->
     
@@ -94,6 +94,29 @@
         </div>
     </section>
     <!-- about -->
+
+    <section class="section" id="about">
+        <div class="section-title">
+            <h2>about <span>Tai Wan</span></h2>
+        </div>
+        <div class="section-center about-center">
+            <div class="about-img">
+                <img src="../TaiWan/TaiWan.png" class="about-photo" alt="awesome landscape">
+            </div>
+            <article class="about-info">
+                <p class="h3">What is Tai Wan?</p>
+                <p>Taiwan, officially the Republic of China (ROC), is a country in East Asia. The main island of Taiwan, also known as Formosa, lies between the East and South China Seas in the northwestern Pacific Ocean, with the People's Republic of China (PRC) to the northwest, Japan to the northeast, and the Philippines to the south. It has an area of 35,808 square kilometres (13,826 square miles), with mountain ranges dominating the eastern two-thirds and plains in the western third, where its highly urbanized population is concentrated. The combined territories under ROC control consist of 168 islands in total covering 36,193 square kilometres (13,974 square miles). The largest metropolitan area is formed by Taipei (the capital), New Taipei City, and Keelung. With around 23.9 million inhabitants, Taiwan is among the most densely populated countries.</p>
+
+                <p>Taiwan has been settled for at least 25,000 years. Ancestors of Taiwanese indigenous peoples settled the island around 6,000 years ago. In the 17th century, large-scale Han Chinese immigration began under a Dutch colony and continued under the Kingdom of Tungning, the first predominantly Han Chinese state in Taiwanese history. The island was annexed in 1683 by the Qing dynasty of China and ceded to the Empire of Japan in 1895. The Republic of China, which had overthrown the Qing in 1912 under the leadership of Sun Yat-sen, took control following the surrender of Japan in 1945. The immediate resumption of the Chinese Civil War resulted in the loss of the Chinese mainland to Communist forces, who established the People's Republic of China and the flight of the ROC central government to Taiwan in 1949. The effective jurisdiction of the ROC has since been limited to Taiwan, Penghu, and smaller islands.</p>
+
+                <p>The early 1960s saw rapid economic growth and industrialization called the "Taiwan Miracle". In the late 1980s and early 1990s, the ROC transitioned from a one-party state under martial law to a multi-party democracy, with democratically elected presidents beginning in 1996. Taiwan's export-oriented economy is the 21st-largest in the world by nominal GDP and the 20th-largest by PPP measures, with a focus on steel, machinery, electronics, and chemicals manufacturing. Taiwan is a developed country. It is ranked highly in terms of civil liberties, healthcare, and human development.</p>
+
+                <p>The political status of Taiwan is contentious. Despite being a founding member, the ROC no longer represents China as a member of the United Nations after UN members voted in 1971 to recognize the PRC instead. The ROC maintained its claim of being the sole legitimate representative of China and its territory until 1991, when it ceased to regard the Chinese Communist Party as a rebellious group and acknowledged its control over mainland China. Taiwan is claimed by the PRC, which refuses to establish diplomatic relations with countries that recognise the ROC. Taiwan maintains official diplomatic relations with 11 out of 193 UN member states and the Holy See. Many others maintain unofficial diplomatic ties through representative offices and institutions that function as de facto embassies and consulates. International organizations in which the PRC participates either refuse to grant membership to Taiwan or allow it to participate on a non-state basis. Domestically, the major political contention is between parties favoring eventual Chinese unification and promoting a pan-Chinese identity, contrasted with those aspiring to formal international recognition and promoting a Taiwanese identity; in the 21st century, both sides have moderated their positions to broaden their appeal.</p>
+                <p><a href="#infos" class="btn">read more</a></p>
+           </article>
+        </div>
+    </section>
+
     <section class="section" id="about">
         <div class="section-title">
             <!-- <h2>about <span>Four Asian Tigers</span></h2> -->
@@ -186,10 +209,10 @@
 <footer class="section footer">
     <ul class="footer-links">
         <li><a href="#home" class="footer-link">Home</a></li>
-        <!-- <li><a href="#about" class="footer-link">About</a></li> -->
+        <li><a href="#about" class="footer-link">About</a></li>
         <!-- <li><a href="#notice" class="footer-link">Notice</a></li> -->
         <li><a href="#info" class="footer-link">Info</a></li>
-        <li><a href="#contact" class="footer-link">Contact</a></li>
+        <li><a href="contact.html" class="footer-link">Contact</a></li>
     </ul>
     <ul class="footer-icons">
         <li>
