--- a/en/HongKong.html
+++ b/en/HongKong.html
@@ -30,7 +30,7 @@
                 <li><a href="#about" class="nav-link">About </a></li>
                 <!-- <li><a href="#notices" class="nav-link">Notice</a></li> -->
                 <li><a href="#infos" class="nav-link">Info</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
         <div class="nav-icons">
