--- a/en/contact.html
+++ b/en/contact.html
@@ -88,9 +88,7 @@
     </nav>
     <section class="hero_v2" id="home">
         <div class="hero-banner">
-        <div class="water">
-            <div id="waterHolder"></div>
-        </div>
+        <img src="../images/four-asian-tigers.png" alt="four asian tigers" class="contact-image">
             <a href="#contact" class="btn hero-btn">Click me</a>
         </div>
     </section>
@@ -172,8 +170,7 @@
         <span id="date">all right reserved</span>
     </p>
 </footer>
-<script src="../js/watercanvas.js"></script>
-<script src="../js/app.js"></script>
-<script src="../js/water.js"></script>
+    <script src="../js/app.js"></script>
+
 </body>
 </html>
