--- a/en/HongKong.html
+++ b/en/HongKong.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="info-info">
                     <h4>TAIPEI 101</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Taipei 101, formerly known as the Taipei World Financial...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -173,7 +173,7 @@
                 </div>
                 <div class="info-info">
                     <h4>N Seoul Tower</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Many visitors ride the Namsan cable car up Namsan Mountain to walk to the...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -190,7 +190,7 @@
                 </div>
                 <div class="info-info">
                     <h4>Merlion Park</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Merlion Park, formerly known as the Taipei World Financial Center, is a...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
