--- a/en/TaiBei.html
+++ b/en/TaiBei.html
@@ -152,14 +152,14 @@
                         <h2><span>Four Asian Tigers</span> Info</h2>
                     </div>
         <div class="section-center featured-center">
-            <article class="info-card" onclick="en_HongKong()">
+             <article class="info-card" onclick="en_HongKong()">
                 <div class="info-img-container">
                     <img src="../images/Avenue_of_Stars.png"  class="info-img" alt="">
                     <p class="info-place">China, Hong Kong, Avenue of Stars</p>
                 </div>
                 <div class="info-info">
                     <h4>Avenue of Stars</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>The Avenue of Stars is located in the Tsim Sha Tsui Promenade Gardens in...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -169,7 +169,7 @@
                 </ul>
                 </div>
              </article>
-
+  
              <article class="info-card" onclick="en_Seoul()">
                 <div class="info-img-container">
                     <img src="../images/N_Seoul_Tower.png" class="info-img" alt="">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="info-info">
                     <h4>N Seoul Tower</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Many visitors ride the Namsan cable car up Namsan Mountain to walk to the...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -194,7 +194,7 @@
                 </div>
                 <div class="info-info">
                     <h4>Merlion Park</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Merlion Park, formerly known as the Taipei World Financial Center, is a...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
