--- a/en/Seoul.html
+++ b/en/Seoul.html
@@ -150,14 +150,14 @@
                         <h2><span>Four Asian Tigers</span> Info</h2>
                     </div>
         <div class="section-center featured-center">
-            <article class="info-card" onclick="en_HongKong()">
+             <article class="info-card" onclick="en_HongKong()">
                 <div class="info-img-container">
                     <img src="../images/Avenue_of_Stars.png"  class="info-img" alt="">
                     <p class="info-place">China, Hong Kong, Avenue of Stars</p>
                 </div>
                 <div class="info-info">
                     <h4>Avenue of Stars</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>The Avenue of Stars is located in the Tsim Sha Tsui Promenade Gardens in...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="info-info">
                     <h4>TAIPEI 101</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Taipei 101, formerly known as the Taipei World Financial...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -186,13 +186,13 @@
              </article>
 
              <article class="info-card" onclick="en_Singapore()">
-                <div class="info-img-container">
+                <div class="info-img-container" >
                     <img src="../images/Merlion_Park.png" class="info-img"  alt="">
                     <p class="info-place">Singapore, Singapore City, Merlion Park</p>
                 </div>
                 <div class="info-info">
                     <h4>Merlion Park</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Merlion Park, formerly known as the Taipei World Financial Center, is a...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -202,6 +202,11 @@
                 </ul>
                 </div>
              </article>
+
+
+
+
+
 </div>
         </section>
 <footer class="section footer">
