--- a/en/Singapore.html
+++ b/en/Singapore.html
@@ -155,14 +155,16 @@
                         <h2><span>Four Asian Tigers</span> Info</h2>
                     </div>
         <div class="section-center featured-center">
-            <article class="info-card" onclick="en_HongKong()">
+
+
+             <article class="info-card" onclick="en_HongKong()">
                 <div class="info-img-container">
                     <img src="../images/Avenue_of_Stars.png"  class="info-img" alt="">
                     <p class="info-place">China, Hong Kong, Avenue of Stars</p>
                 </div>
                 <div class="info-info">
                     <h4>Avenue of Stars</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>The Avenue of Stars is located in the Tsim Sha Tsui Promenade Gardens in...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -179,7 +181,7 @@
                 </div>
                 <div class="info-info">
                     <h4>TAIPEI 101</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Taipei 101, formerly known as the Taipei World Financial...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -196,7 +198,7 @@
                 </div>
                 <div class="info-info">
                     <h4>N Seoul Tower</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Many visitors ride the Namsan cable car up Namsan Mountain to walk to the...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -206,6 +208,7 @@
                 </ul>
                 </div>
              </article>
+
 
 </div>
         </section>
