--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
                 <div class="info-info">
                     <h4>Avenue of Stars</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>The Avenue of Stars is located in the Tsim Sha Tsui Promenade Gardens in...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -183,7 +183,7 @@
                 </div>
                 <div class="info-info">
                     <h4>TAIPEI 101</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Taipei 101, formerly known as the Taipei World Financial...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -200,7 +200,7 @@
                 </div>
                 <div class="info-info">
                     <h4>N Seoul Tower</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Many visitors ride the Namsan cable car up Namsan Mountain to walk to the...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
@@ -217,7 +217,7 @@
                 </div>
                 <div class="info-info">
                     <h4>Merlion Park</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, possimus?</p>
+                    <p>Merlion Park, formerly known as the Taipei World Financial Center, is a...</p>
                 </div>
                 <div class="info-footer">
                    <ul class="info-footer-info">
