--- a/en/TaiPei.html
+++ b/en/TaiPei.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/flex.css">
     <link rel="stylesheet" href="../css/Tourist_Attraction.css">
-    <title>Tai Bei</title>
+    <title>Tai Pei</title>
 
 </head>
 <body>
@@ -87,9 +87,9 @@
     </nav>
     <section class="hero" id="home">
         <div class="hero-banner">
-            <h1>Tai Wan, Tai Bei, TAIPEI 101</h1>
+            <h1>Tai Wan, Tai Pei, TAIPEI 101</h1>
             <video autoplay muted loop class="video" >
-                <source src="../video/TaiBei.mp4" type="video/mp4">
+                <source src="../video/TaiPei.mp4" type="video/mp4">
             </video>
         </div>
     </section>
