--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                 </ul>
                 </div>
              </article>
-             <article class="info-card" onclick="TaiBei()">
+             <article class="info-card" onclick="TaiPei()">
                 <div class="info-img-container">
                     <img src="./images/TAIPEI_101.png" class="info-img" alt="">
-                    <p class="info-place">Tai Wan, Tai Bei, TAIPEI 101</p>
+                    <p class="info-place">Tai Wan, Tai Pei, TAIPEI 101</p>
                 </div>
                 <div class="info-info">
                     <h4>TAIPEI 101</h4>
@@ -188,7 +188,7 @@
                 <div class="info-footer">
                    <ul class="info-footer-info">
                     <li><i class="fa-solid fa-map"></i>Tai Wan</li>
-                    <li>Tai Bei</li>
+                    <li>Tai Pei</li>
                     <li>TAIPEI 101</li>
                 </ul>
                 </div>
