--- a/en/TaiPei.html
+++ b/en/TaiPei.html
@@ -26,8 +26,8 @@
         <div class="nav-links">
             <ul class="nav-list" id="nav-list">
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <!-- <li><a href="#about" class="nav-link">About </a></li> -->
-                <!-- <li><a href="#notices" class="nav-link">Notice</a></li> -->
+                <li><a href="#about" class="nav-link">About </a></li>
+                <li><a href="#notices" class="nav-link">Notice</a></li>
                 <li><a href="#infos" class="nav-link">Info</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
@@ -76,7 +76,7 @@
             <ul class="mobile-nav-list" id="mobile-nav-list">
                 <li><a href="#home" class="mobile-nav-link">Home</a></li>
                 <li><a href="#about" class="mobile-nav-link">About</a></li>
-                <!-- <li><a href="#notice" class="mobile-nav-link">Notice</a></li> -->
+                <li><a href="#notices" class="mobile-nav-link">Notice</a></li>
                 <li><a href="#infos" class="mobile-nav-link">Info</a></li>
                 <li><a href="contact.html" class="mobile-nav-link">Contact</a></li>
                 <!-- <li><a href="../tc/index.html" class="mobile-nav-link" title="繁體中文">繁體中文</a></li>
@@ -89,7 +89,7 @@
         <div class="hero-banner">
             <h1>Tai Wan, Tai Pei, TAIPEI 101</h1>
             <video autoplay muted loop class="video" >
-                <source src="../video/TaiPei.mp4" type="video/mp4">
+                <source src="../video/TaiBei.mp4" type="video/mp4">
             </video>
         </div>
     </section>
@@ -117,9 +117,9 @@
         </div>
     </section>
 
-    <section class="section" id="about">
+    <section class="section" id="notices">
         <div class="section-title">
-            <!-- <h2>about <span>Four Asian Tigers</span></h2> -->
+            <h2><span>travel Tai Wan</span> notice</h2>
         </div>
         <div class="section-center about-center">
             <article class="about-info">
@@ -210,7 +210,7 @@
     <ul class="footer-links">
         <li><a href="#home" class="footer-link">Home</a></li>
         <li><a href="#about" class="footer-link">About</a></li>
-        <!-- <li><a href="#notice" class="footer-link">Notice</a></li> -->
+        <li><a href="#notices" class="footer-link">Notice</a></li>
         <li><a href="#info" class="footer-link">Info</a></li>
         <li><a href="contact.html" class="footer-link">Contact</a></li>
     </ul>
